# starting-ragchatbot-codebase-motaqi

./: CLAUDE.md  pyproject.toml
backend/: ai_generator.py  app.py  fixes_analysis.md  query_flow_diagram.md  search_tools.py
backend/tests/: conftest.py  pytest.ini  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py  test_system_health.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-check.sh
